--- a/requirements.yml
+++ b/requirements.yml
@@ -17,7 +17,7 @@ functional:
     - Сайт должен использовать HTTPS для защиты передачи данных.
     - Сайт должен быть защищен от распространенных уязвимостей (SQL-инъекции, XSS и т.д.).
     - Сайт должен быть адаптивным и корректно отображаться на мобильных устройствах.
-    - Сайт должен быть протестирован на совместимость с последними версиями популярных браузеров (Chrome, Firefox, Safari, Edge).
+    - Сайт должен быть протестирован на совместимость с последними версиями популярных браузеров (Chrome, Firefox, Safari,Yandex Browser).
     - Сайт должен быть масштабируемым и способным обрабатывать до 1000 одновременных пользователей без ухудшения производительности.
     - Сайт должен быть доступен 24/7 с минимальным временем простоя.
     - Интерфейс должен быть интуитивно понятным и доступным для пользователей с разными уровнями компьютерной грамотности.
