--- a/test-cases.yml
+++ b/test-cases.yml
@@ -193,12 +193,12 @@
   - summary: |
          Изменение языка кода в созданной игре
   requirement: |
-         Пользователь может менять язык решения в процессе игры
+         Пользователь может менять язык программирования в процессе игры
   prerequisites: |
-       Пользователь авторизован
-       Создана новая игра
+        Пользователь авторизован
+        Создана новая игра
   test-data: |
-       Используемый язык = Node.js 16.17.0
+       Используемый язык = Node.js 20.11.1
   steps:
       - В окне заданного языка в выпадающем списке выбрать "Python 3.12.2"
   expected-result: |
@@ -207,16 +207,16 @@
   - summary: |
      Изменение стиля редактора с темного на светлый
   requirement: |
-    Пользователь может изменить стиль редактора 
+    Пользователь должен иметь возможность изменить стиль редактора 
   prerequisites: |
-    Пользователь авторизован
-    Созданна игра 
+    Пользователь должен быть авторизован.
+    Игра должна быть создана
   test-data: |
     no data
   steps:
-    - Нажать на кнопку с изображение солнца в редакторе кода
+    - Нажмите на кнопку с изображением солнца в редакторе кода.
   expected-result: |
-    Меняется стиль редактора с темного на светлый
+     Стиль редактора изменяется с темного на светлый
     
   - summary: |
     Просмотр рейтинга с достижениями игроков сайта
