--- a/issues.yml
+++ b/issues.yml
@@ -1,7 +1,8 @@
 ---
 issues:
-  --url: "https://github.com/hexlet-codebattle/codebattle/issues/1923#issuecomment-2541209090"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1923#issuecomment-2541209090"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2031#issue-2737778325"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2032#issue-2737868082"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2033#issue-2737920575"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1943#issuecomment-2541045600"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2034#issue-2738261650"
