--- a/issues.yml
+++ b/issues.yml
@@ -6,3 +6,5 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2033#issue-2737920575"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1943#issuecomment-2541045600"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2034#issue-2738261650"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2036#issue-2744297019"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2000#issuecomment-2547890001"
