--- a/test-cases.yml
+++ b/test-cases.yml
@@ -40,6 +40,21 @@
       Появляется сообщение об ошибке: "Email is already taken"
 
   - summary: |
+    Проверка получения письма-подтверждение о регистрации на электронную почту
+  requirement: |
+    Пользователь должен получить письмо-подтверждение о регистрации на электронную почту
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+     no-data
+  steps:
+    - Нажимаем на кнопку "Sign up"
+    - Заполняем поля для регистрации
+    - Нажимаем на кнопку "Submit"
+  expected-result: |
+    Должно прийти письмо-подтверждение о регистрации на электронную почту
+
+  - summary: |
       Проверка функционала личного кабинета
   requirement: |
       Личный кабинет должен отображать информацию о пользователе и его активности на платформе
@@ -53,12 +68,12 @@
       Пользователь должен увидеть свою информацию, включая историю решенных задач, ранг, дату регистрации.
 
   - summary: |
-      Проверка отзывчивости интерфейса на мобильных устройствах
+      Проверка адаптивности интерфейса на мобильных устройствах
   requirement: |
       Интерфейс должен корректно отображаться на мобильных устройствах
   prerequisites: |
       Открыта главная страница 
-      Открыт инструмент разработчика 
+      Открыт инструмент разработчика DevTools
   test-data: |
       Не требуется
   steps:
@@ -77,10 +92,12 @@
   test-data: |
       Не требуется
   steps:
+      - Открыть инструмент разработчика "DevTools"
       - Перейти на профиль любого пользователя во вкладке "Leaderboard"
       - Ожидать загрузки страницы
   expected-result: |
       Страница должна загрузиться в пределах 5 секунд
+      
   - summary: |
     Проверка успешной регистрации пользователя через GitHub
   requirement: |
@@ -213,10 +230,10 @@
     Игра должна быть создана
   test-data: |
     no data
-  steps:
-    - Нажмите на кнопку с изображением солнца в редакторе кода.
+  steps: |
+    Нажмите на кнопку смены темы  в редакторе кода. (смотреть скриншот Theme: dark- light )  
   expected-result: |
-     Стиль редактора изменяется с темного на светлый
+     Стиль редактора меняется с темного на светлый
     
   - summary: |
     Просмотр рейтинга с достижениями игроков сайта
@@ -262,9 +279,8 @@
   test-data: |
     no data
   steps:
-    - Нажать на вкладку Lobby
-    - Выбрать любую игру
-    - Нажать на кнопку Fight
+    - Нажать на вкладку приглашений
+    - Принять игру
   expected-result: |
     Пользователь подключаеться к созданной игре
 
@@ -329,3 +345,16 @@
     - В таблице Leaderboard нажать на ссылку Top list
  expected-result: |
     Отображается подробная информация о рейтингах пользователей
+
+ - summary: |
+    Проверка создания игры без регистрации
+ requirement: |
+    Пользователь должен иметь возможность создать игру без регистрации
+ prerequisites: |
+    Открыта главная страница сайта
+ test-data: |
+    no-data
+ steps:
+    - Нажимаем на кнопку "Try simple battle"
+ expected-result: |
+    Должна произойти переадресация на страницу с рандомно созданной игрой
