--- a/testing-report.yml
+++ b/testing-report.yml
@@ -8,6 +8,10 @@ status: pass
 status: pass
 
 - summary: |
+    Проверка получения письма-подтверждение о регистрации на электронную почту
+status: fail
+
+- summary: |
     Проверка функционала личного кабинета
 status: pass
 
