--- a/testing-report.yml
+++ b/testing-report.yml
@@ -82,3 +82,7 @@ status: pass
 - summary: |
     Просмотр информации о рейтингах пользователей
 status: pass
+
+- summary: |
+    Проверка создания игры без регистрации
+status: pass
