--- a/test-cases.yml
+++ b/test-cases.yml
@@ -231,7 +231,7 @@
   test-data: |
     no data
   steps: |
-    - Нажмите на кнопку смены темы  в редакторе кода (Приложенный скриншот кнопки)
+    - Нажмите на кнопку смены темы в редакторе кода приложенный скриншот кнопки
   expected-result: |
      Стиль редактора меняется с темного на светлый
     
