--- a/test-cases.yml
+++ b/test-cases.yml
@@ -230,8 +230,8 @@
     Игра должна быть создана
   test-data: |
     no data
-  steps: |
-    - Нажмите на кнопку смены темы в редакторе кода приложенный скриншот кнопки
+  steps:
+      - Нажмите на кнопку смены темы в редакторе кода приложенный скриншот кнопки
   expected-result: |
      Стиль редактора меняется с темного на светлый
     
