--- a/test-cases.yml
+++ b/test-cases.yml
@@ -6,10 +6,7 @@
   prerequisites: |
       Открыта страница регистрации
   test-data: |
-      Nickname = newuser
-      Email = newuser@example.com
-      Password = newpassword
-      Password Confirmation = newpassword
+      no data
   steps:
       - Вводим логин
       - Вводим email
@@ -17,19 +14,16 @@
       - Подтверждаем пароль
       - Нажимаем кнопку «Submit»
   expected-result: |
-      Пользователь должен быть зарегистрирован и перенаправлен на главную страницу сайта.
+      Пользователь успешно зарегестрирован
 
 - summary: |
-      Проверка регистрации с уже существующим email
+      Проверка повторной регистрации зарегистрированного пользователя
   requirement: |
       При попытке зарегистрировать пользователя с уже использованным email система должна вывести ошибку
   prerequisites: |
       Открыта страница регистрации
   test-data: |
-      Nickname = duplicat1
       Email = newuser@example.com
-      Password = password123
-      Password Confirmation = password123
   steps:
       - Вводим логин
       - Вводим email
@@ -40,32 +34,51 @@
       Появляется сообщение об ошибке: "Email is already taken"
 
 - summary: |
-    Проверка получения письма-подтверждение о регистрации на электронную почту
+      Проверка регистрации с неверным форматом email
   requirement: |
-    Пользователь должен получить письмо-подтверждение о регистрации на электронную почту
+      При вводе некорректного email, система должна выдать ошибку
   prerequisites: |
-    Открыта главная страница сайта
+      Открыта страница регистрации
   test-data: |
-     no-data
+      Email = invalid_email.com
   steps:
-    - Нажимаем на кнопку "Sign up"
-    - Заполняем поля для регистрации
-    - Нажимаем на кнопку "Submit"
+      - Вводим логин
+      - Вводим email
+      - Вводим пароль
+      - Подтверждаем пароль
+      - Нажимаем кнопку «Submit»
   expected-result: |
-    Должно прийти письмо-подтверждение о регистрации на электронную почту
+      Пользователь не зарегестрирован (Неверный адрес электронной почты).      
 
 - summary: |
-      Проверка функционала личного кабинета
+      Проверка редактирования информации в личном кабинете
   requirement: |
-      Личный кабинет должен отображать информацию о пользователе и его активности на платформе
+      Пользователь должен иметь возможность изменить информацию в личном кабинете (например, имя, фото).
   prerequisites: |
-      Пользователь авторизован на сайте
+      Открыта страница сайта 
+      Пользователь авторизован
   test-data: |
       Не требуется
   steps:
       - Перейти в личный кабинет
+      - Нажать на кнопку Edit Profile
   expected-result: |
-      Пользователь должен увидеть свою информацию, включая историю решенных задач, ранг, дату регистрации.
+      Пользователь может редактировать информацию в личном кабинете
+      
+- summary: |
+      Проверка восстановления пароля
+  requirement: |
+      Пользователю должно быть отправлено письмо на email с ссылкой для восстановления пароляь
+  prerequisites: |
+      Открыта страница входа
+  test-data: |
+    no data  
+  steps:
+      - Нажать на кнопку Forgot your password?
+      - Ввести Email
+      - Нажать кнопку Submit
+  expected-result: |
+      Пользователю отправлено сообщение на email с восстановление пароля
 
 - summary: |
       Проверка адаптивности интерфейса на мобильных устройствах
@@ -82,55 +95,34 @@
       - Проверить адаптивность элементов интерфейса
   expected-result: |
       Все элементы интерфейса должны быть корректно адаптированы для мобильных устройств
-
-- summary: |
-      Проверка скорости ответа сервера
-  requirement: |
-      Система должна отвечать на запросы в разумные сроки (например, до 5 секунд)
-  prerequisites: |
-      Открыта главная страница сайта
-  test-data: |
-      Не требуется
-  steps:
-      - Открыть инструмент разработчика "DevTools"
-      - Перейти на профиль любого пользователя во вкладке "Leaderboard"
-      - Ожидать загрузки страницы
-  expected-result: |
-      Страница должна загрузиться в пределах 5 секунд
       
 - summary: |
-    Проверка успешной регистрации пользователя через GitHub
+    Проверка авторизации через Github
   requirement: |
     Пользователь должен иметь возможность зарегистрироваться/авторизоваться через email, аккаунт GitHub, Discord
   prerequisites: |
-    Открыта страница регистрации
+    Пользователь выполнил вход в свой аккаунт на github
   test-data: |
     no data
   steps:
     - Нажать на кнопку Sign up
     - Нажать на кнопку Sign in with Github
-    - Ввести логин в поле Username
-    - Ввести пароль в поле Password
-    - Нажать на кнопку Sign in
   expected-result: |
-    Пользователь должен зарегистрироваться и попасть на главную страницу
-    Пользователь получает сообщение об успешной аутентификации
+    Пользователь успешно авторизован через GitHub
 
 - summary: |
-    Проверка успешной авторизации пользователя через GitHub
+    Проверка успешной авторизации пользователя через Discord
   requirement: |
     Пользователь должен иметь возможность зарегистрироваться/авторизоваться через email, аккаунт GitHub, Discord
   prerequisites: |
-    Открыта страница сайта 
-    Пользователь авторизован на GitHub
+    Пользователь выполнил вход в свой аккаунт Discord
   test-data: |
     no data
   steps:
     - Нажать на кнопку Sign in
-    - Нажать на кнопку Sign in with Github
+    - Нажать на кнопку Sign in with Discord
   expected-result: |
-    Пользователь должен авторизоваться и попасть на главную страницу
-    Пользователь получает сообщение об успешной аутентификации  
+    Пользователь успешно авторизован через Discord 
 
 - summary: |
     Создание игры с ботом
@@ -149,13 +141,13 @@
     Создается новая игра по указанным параметрам
     
 - summary: |
-      Проверка отправки решения задачи
+      Проверка ввода верного кода в активной игре
   requirement: |
       После решения задачи пользователь должен иметь возможность отправить решение и получить результат
   prerequisites: |
       Пользователь авторизован 
-      Находится на странице задачи
-      Задание rect_area
+      Создана игра 
+      Параметры созданной игры(Level-1,Game Type-With a bot,Time control-8min,Choose task by name or tags-rect_area,Tags-math)
   test-data: |
       Код решения задачи = const _ = require("lodash");
                            const R = require("rambda");
@@ -169,31 +161,33 @@
       - Вводим решение задачи в редактор
       - Нажимаем кнопку «Run»
   expected-result: |
-      Пользователь должен увидеть сообщение о результате выполнения решения
+      Код проверен и принят как верный
 
 - summary: |
-      Проверка результата решения задачи
+      Проверка ввода неверного кода в активной игре
   requirement: |
-      После отправки решения задача должна быть проверена, и результат должен быть отображен
+      После отправки решения выводится сообщение об ошибке
   prerequisites: |
       Пользователь авторизован 
-      Решил задачу rect_area
+      Создана игра 
+      Параметры игры (Level-1,Game Type-With a bot,Time control-8min,Choose task by name or tags-rect_area,Tags-math)
   test-data: |
       Код решения задачи = const _ = require("lodash");
                            const R = require("rambda");
 
                            const solution = (width, length) => {
-                             return width * length;
+                             return width + length;
                            };
 
                            module.exports = solution;
   steps:
-      - Ожидаем проверки решения системой
+      - Вводим решение задачи в редактор
+      - Нажимаем кнопку «Run»
   expected-result: |
-      Пользователь должен увидеть сообщение о том, что задача решена успешно или с ошибками
+      Код проверен и принят как неверный
 
 - summary: |
-      Отправка сообщения в созданной игре между оппонентами
+      Проверка отправки сообщения в чат в активной игре
   requirement: |
       После после создания игры пользователи должены иметь возможность отправлять сообщения друг другу
   prerequisites: |
@@ -205,7 +199,7 @@
       - Ввести любое сообщение в поле Be nice at chat!
       - Нажать на кнопку Send
   expected-result: |
-      Пользователь должен иметь возможность отправлять сообщение оппоненту
+      Отправленное сообщение отображается в чате
 
 - summary: |
          Изменение языка кода в созданной игре
@@ -249,26 +243,7 @@
     - Из выпавшего списка выбрать "Users rating"
   expected-result: |
     Открывается таблица с достижениями игроков 
-
-- summary: |
-    Создание игры с определенными параметрами
-  requirement: |
-    Пользователь должен иметь возможность создать игру с необходимыми параметрами
-  prerequisites: |
-    Пользователь авторизован
-    Находиться на главной странице
-  test-data: |
-    no data
-  steps:
-    - Нажать на кнопку Create a game
-    - Выбрать любой Level
-    - Выбрать любой Game Type
-    - Указать любой Time control
-    - Выбрать задачу или указать теги
-    - Нажать на кнопку Create a battle
-  expected-result: |
-    Создаётся игра с указанными параметрами
-
+    
 - summary: |
     Присоединение к созданной игре
   requirement: |
@@ -285,7 +260,7 @@
     Пользователь подключаеться к созданной игре
 
 - summary: |
-    Отправка сообщений в общий чат
+    Проверка отправки сообщения в общий чат
   requirement: |
     Пользователь должен иметь возможность писать в общий чат
   prerequisites: |
@@ -297,10 +272,10 @@
     - Ввести любое сообщение в поле Be nice at chat!
     - Нажать на кнопку Send
   expected-result: |
-    Отправляется сообщение в общий чат
+    Сообщение отправляется в общий чат
 
 - summary: |
-    Отправка личного сообщения пользователю
+    Проверка отпраки личного сообщения пользователю
   requirement: |
     Пользователь должен иметь возможность писать личные сообщения
   prerequisites: |
