--- a/test-cases.yml
+++ b/test-cases.yml
@@ -111,7 +111,7 @@
     Пользователь успешно авторизован через GitHub
 
 - summary: |
-    Проверка успешной авторизации пользователя через Discord
+    Проверка авторизации  через Discord
   requirement: |
     Пользователь должен иметь возможность зарегистрироваться/авторизоваться через email, аккаунт GitHub, Discord
   prerequisites: |
