--- a/test-cases.yml
+++ b/test-cases.yml
@@ -332,4 +332,4 @@
   steps:
     - Нажимаем на кнопку "Try simple battle"
   expected-result: |
-    Должна произойти переадресация на страницу с рандомно созданной игрой
+    Пользователь перенаправится на страницу с рандомно созданной игрой.
