--- a/testing-report.yml
+++ b/testing-report.yml
@@ -2,33 +2,33 @@
 - summary: |
     Проверка успешной регистрации нового пользователя
   status: pass
-  
+
 - summary: |
-    Проверка регистрации с уже существующим email
+    Проверка повторной регистрации зарегистрированного пользователя
   status: pass
 
 - summary: |
-    Проверка получения письма-подтверждение о регистрации на электронную почту
+     Проверка регистрации с неверным форматом email
+  status: pass
+
+- summary: |
+    Проверка редактирования информации в личном кабинете
   status: fail
 
 - summary: |
-    Проверка функционала личного кабинета
+    Проверка восстановления пароля
   status: pass
 
 - summary: |
-    Проверка отзывчивости интерфейса на мобильных устройствах
+    Проверка адаптивности интерфейса на мобильных устройствах
   status: pass
 
 - summary: |
-    Проверка скорости ответа сервера
+    Проверка авторизации через Github
   status: pass
 
 - summary: |
-    Проверка успешной регистрации пользователя через GitHub
-  status: pass
-
-- summary: |
-    Проверка успешной авторизации пользователя через GitHub
+    Проверка авторизации  через Discord
   status: pass
 
 - summary: |
@@ -36,15 +36,15 @@
   status: pass
 
 - summary: |
-    Проверка отправки решения задачи
+    Проверка ввода верного кода в активной игре
   status: pass
 
 - summary: |
-    Проверка результата решения задачи
+    Проверка ввода неверного кода в активной игре
   status: pass
 
 - summary: |
-    Отправка сообщения в созданной игре между оппонентами
+    Проверка отправки сообщения в чат в активной игре
   status: pass
 
 - summary: |
@@ -56,33 +56,29 @@
   status: pass
 
 - summary: |
-    Просмотр рейтинга с достижениями игроков сайта
+     Просмотр рейтинга с достижениями игроков сайта
   status: pass
 
 - summary: |
-    Создание игры с определенными параметрами
+     Присоединение к созданной игре
   status: pass
 
 - summary: |
-    Присоединение к созданной игре
+     Проверка отправки сообщения в общий чат
   status: pass
 
 - summary: |
-    Отправка сообщений в общий чат
-  status: pass
-    
-- summary: |
-    Отправка личного сообщения пользователю
+     Проверка отпраки личного сообщения пользователю
   status: pass
 
 - summary: |
-    Просмотр информации о турнирах
+     Просмотр информации о турнирах
   status: pass
 
 - summary: |
-    Просмотр информации о рейтингах пользователей
+     Просмотр информации о рейтингах пользователей 
   status: pass
 
 - summary: |
-    Проверка создания игры без регистрации
+      Проверка создания игры без регистрации
   status: pass
